--- a/about.html
+++ b/about.html
@@ -53,9 +53,7 @@
         <h3>Izem Celik</h3>
         <button class="cv" onclick="document.location='./static/pdf/cv.pdf'">Download Resume</button>
         <br></br>
-            <p class="test">I am an architecture student, designer and music producer from London (currently in Essex). Before moving to the UK, I spent my infant life in Kandy, Sri Lanka - the land of elephants, colourful houses and delicate hill-country breezes.
-
-                People find me to be an upbeat, self-motivated team player with excellent communication skills. I enjoy challenging myself to learn new things, and the knowledge and perspective my curiosity leads me to has enabled me to develop various skills across many creative disciplines ranging from motion graphics, video editing to fine art and most recently music production.</p>
+            <p class="test">I’m an architecture BA (Hons) graduate, with one year of experience from Brighton. I have been nominated and presented for both RIBA Student Prize 2022 and AJ Student Price 2022 by my university. People find me to be an upbeat, self-motivated team player with excellent communication skills. I enjoy challenging myself to learn new things, and the knowledge and perspective my curiosity leads me to has en-abled me to develop various skills across many creative disciplines ranging from motion graphics, and video editing to fine art and philosophy.</p>
     </span>
 </div>
 
@@ -66,6 +64,16 @@
         <p>BA (Hons) Architecture</p>
         <p>17/09/2016 – 14/06/2019 • Canterbury</p>
         <p>First Class Honours</p>
+        <br>
+        <p>Gebze Technical University</p>
+        <p>Molecular Biology and Genetics (English)</p>
+        <p>First year completed with overall score 3.6/4</p>
+        <p>Kocaeli, Turkey</p>
+        <br>
+        <p>DAOL (Darica Anadolu Ogretmen Lisesi)</p>
+        <p>High School</p>
+        <p>ODP: 86 /100 (Diploma score)</p>
+        <p>Kocaeli, Turkey</p>
     </span>
 </div>
 
