--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </li>
 
         <li>
-            <a href="https://www.linkedin.com/in/izem-celik-47251a179/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/izemcelik/">LinkedIn</a>
         </li>
 
         <li>
