--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="slide project one">
                 <a href="./project/Architectural%20Design.html">
                     <div class="project-hover" data-content="Architectural Design">
-                        <img src="./static/Projects/Architectural Design/Pages/1.jpg">
+                        <img src="./static/Projects/Architectural Design/cover.jpg">
                     </div>
                 </a>
             </div>
@@ -54,7 +54,7 @@
             <div class="slide project one">
                 <a href="./project/Urban%20Intervention.html">
                     <div class="project-hover" data-content="Urban Intervention">
-                        <img src="./static/Projects/Urban Intervention/Pages/1.jpg">
+                        <img src="./static/Projects/Urban Intervention/cover.jpg">
                     </div>
                 </a>
             </div>
@@ -65,7 +65,7 @@
             <div class="slide project one">
                 <a href="./project/Collective%20Dwelling.html">
                     <div class="project-hover" data-content="Collective Dwelling">
-                        <img src="./static/Projects/Collective Dwelling/Pages/1.jpg">
+                        <img src="./static/Projects/Collective Dwelling/cover.jpg">
                     </div>
                 </a>
             </div>
