--- a/about.html
+++ b/about.html
@@ -62,12 +62,12 @@
         <h4>EDUCATION</h4>
         <p>University of Kent</p>
         <p>BA (Hons) Architecture</p>
-        <p>17/09/2016 – 14/06/2019 • Canterbury</p>
+        <p>2018 – 2021</p>
+        <p>Canterbury, UK</p>
         <p>First Class Honours</p>
         <br>
         <p>Gebze Technical University</p>
         <p>Molecular Biology and Genetics (English)</p>
-        <p>First year completed with overall score 3.6/4</p>
         <p>Kocaeli, Turkey</p>
         <br>
         <p>DAOL (Darica Anadolu Ogretmen Lisesi)</p>
