--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="outer-wrapper">
         <div class="wrapper">
             <div class="slide informative">
-                <div class="info">
+                <div class="info" style="height: 200px;padding: 0px;width:444px;">
                     <a class="name" href="./index.html">Nuriye Izem Celik</a>
                     <span class="intro">RIBA Part 1 Architecture Graduate</span>
                     <!-- <img class="profile-pic"src="/static/images/pic.png"> -->
@@ -37,6 +37,10 @@
                             <a href="http://www.presidentsmedals.com/Entry-54581">RIBA</a>
                         </li>
                     </ul>
+                </div>
+
+                <div class="info" style="height: 250px; margin-top: 10px; padding: 0px;width:444px;">
+                    <iframe width="444px" height="250" src="https://www.youtube.com/embed/QfUNHfBcJA4?controls=0&autoplay=1&loop=1&mute=1&playlist=QfUNHfBcJA4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
 
