--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <h3>Izem Celik</h3>
         <button class="cv" onclick="document.location='./static/pdf/cv.pdf'">Download Resume</button>
         <br></br>
-            <p class="test">I’m an architecture BA (Hons) graduate, with one year of experience from Brighton. I have been nominated and presented for both RIBA Student Prize 2022 and AJ Student Price 2022 by my university. People find me to be an upbeat, self-motivated team player with excellent communication skills. I enjoy challenging myself to learn new things, and the knowledge and perspective my curiosity leads me to has en-abled me to develop various skills across many creative disciplines ranging from motion graphics, and video editing to fine art and philosophy.</p>
+            <p class="test">I’m an architecture BA (Hons) graduate, with one year of experience from Brighton. I have been nominated and presented for both RIBA Student Prize 2022 and AJ Student Price 2022 by my university. People find me to be an upbeat, self-motivated team player with excellent communication skills. I enjoy challenging myself to learn new things, and the knowledge and perspective my curiosity leads me to has en-abled me to develop various skills across many creative disciplines ranging from motion graphics, video editing to fine art and philosophy.</p>
     </span>
 </div>
 
