--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel=stylesheet type=text/css href="./static/css/main.css">
-<title>nicarch</title>
+    <title>nicarch</title>
 </head>
 
 <body>
@@ -16,31 +16,65 @@
 
     <div class="outer-wrapper">
         <div class="wrapper">
-            <div class="slide informative">
-                <div class="info" style="height: 200px;padding: 0px;width:444px;">
+            <div class="slide informative" style="margin-left: 20px;">
+                <div class="info" style="height: 350px;padding: 0px;width:444px;">
                     <a class="name" href="./index.html">Nuriye Izem Celik</a>
                     <span class="intro">RIBA Part 1 Architecture Graduate</span>
                     <!-- <img class="profile-pic"src="/static/images/pic.png"> -->
                     <ul class="links">
                         <li>
-                            <a href="./index.html">Works</a>
-                        </li>
-                        <li>
                             <a href="./about.html">About</a>
                         </li>
-
                         <li>
-                            <a href="https://www.linkedin.com/in/izemcelik/">LinkedIn</a>
+                            <br>
+                            <b>Publications</b>
+                        </li>
+                        <li>
+                            <a href="https://www.presidentsmedals.com/Entry-54581 " target="_blank">RIBA Bronze Medal
+                                Nomination 2021</a>
+                        </li>
+                        <li>
+                            <a href="https://www.kentarchshow.online/post/nuriye-izem-celik" target="_blank">KASAP End
+                                Year Show 2021</a>
+                        </li>
+                        <li>
+                            <a href=" https://www.architectsjournal.co.uk/digital-edition/aj-22-07-21-student-special"
+                                target="_blank">The Architects' Journal Student Prize Nomination 2021</a>
                         </li>
 
+
+
+
                         <li>
-                            <a href="http://www.presidentsmedals.com/Entry-54581">RIBA</a>
+                            <br>
+                            <a href="./static/pdf/Nuriye_Izem_Celik_Academic&Work Portfolio_2023.pdf"
+                                target="_blank">Downloadable <br>Academic Portfolio (PDF)</a>
+                        </li>
+                        <li>
+                            <br>
+                            <b>Contact</b>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/izemcelik/">LinkedIn</a>
                         </li>
                     </ul>
                 </div>
 
+
                 <div class="info" style="height: 250px; margin-top: 10px; padding: 0px;width:444px;">
-                    <iframe width="444px" height="250" src="https://www.youtube.com/embed/QfUNHfBcJA4?controls=0&autoplay=1&loop=1&mute=1&playlist=QfUNHfBcJA4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%"
+                        src="https://www.youtube.com/embed/QfUNHfBcJA4?controls=0&autoplay=1&loop=1&mute=1&playlist=QfUNHfBcJA4"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                        <p style="color:grey;margin: 15px 15px;">
+                            All rights reserved. 
+                            
+                            No part of this
+                            work may be reproduced or used
+                            without permission.
+                            <br><br>© Izem Celik 2023
+                        </p>
                 </div>
             </div>
 
